fix: improve contrast ratio

--- a/src/renderer/themes.css
+++ b/src/renderer/themes.css
@@ -423,7 +423,7 @@ it can be safely elided. This looks quite pleasant on this theme. */
 .everforestDarkHard {
   --primary-text-color: #d3c6aa;
   --secondary-text-color: #d3c6aa;
-  --tertiary-text-color: #b3a68a;
+  --tertiary-text-color: #d3c6aa;
   --title-color: var(--accent-color);
   --bg-color: #272e33;
   --favorite-icon-color: #0f0;
@@ -442,7 +442,7 @@ it can be safely elided. This looks quite pleasant on this theme. */
 .everforestDarkMedium {
   --primary-text-color: #d3c6aa;
   --secondary-text-color: #d3c6aa;
-  --tertiary-text-color: #b3a68a;
+  --tertiary-text-color: #d3c6aa;
   --title-color: var(--accent-color);
   --bg-color: #2d353b;
   --favorite-icon-color: #0f0;
@@ -461,7 +461,7 @@ it can be safely elided. This looks quite pleasant on this theme. */
 .everforestDarkLow {
   --primary-text-color: #d3c6aa;
   --secondary-text-color: #d3c6aa;
-  --tertiary-text-color: #b3a68a;
+  --tertiary-text-color: #d3c6aa;
   --title-color: var(--accent-color);
   --bg-color: #333c43;
   --favorite-icon-color: #0f0;
@@ -479,8 +479,8 @@ it can be safely elided. This looks quite pleasant on this theme. */
 
 .everforestLightHard {
   --primary-text-color: #3c4a52;
-  --secondary-text-color: #5c6a72;
-  --tertiary-text-color: #5c6a72;
+  --secondary-text-color: #3c4a52;
+  --tertiary-text-color: #3c4a52;
   --title-color: var(--accent-color);
   --bg-color: #fffbef;
   --favorite-icon-color: #0f0;
@@ -498,8 +498,8 @@ it can be safely elided. This looks quite pleasant on this theme. */
 
 .everforestLightMedium {
   --primary-text-color: #3c4a52;
-  --secondary-text-color: #5c6a72;
-  --tertiary-text-color: #5c6a72;
+  --secondary-text-color: #3c4a52;
+  --tertiary-text-color: #3c4a52;
   --title-color: var(--accent-color);
   --bg-color: #fdf6e3;
   --favorite-icon-color: #0f0;
@@ -517,8 +517,8 @@ it can be safely elided. This looks quite pleasant on this theme. */
 
 .everforestLightLow {
   --primary-text-color: #3c4a52;
-  --secondary-text-color: #5c6a72;
-  --tertiary-text-color: #5c6a72;
+  --secondary-text-color: #3c4a52;
+  --tertiary-text-color: #3c4a52;
   --title-color: var(--accent-color);
   --bg-color: #f3ead3;
   --favorite-icon-color: #0f0;
